# msalign

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  MANIFEST.in  Makefile  README.md  _setup_support.py  appveyor.yml  mkdocs.yml  msalign.py  msalign_requirements.txt  msalign_test_data.csv  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  version.py  versioneer.py
.circleci/: config.yml
.github/workflows/: ci.yml
docs/: 404.html  index.html  sitemap.xml
docs/css/: justify.css  style.css
docs/examples/: msalign-mass-spectrum.ipynb  msalign-mass-spectrum.md  msalign-multi-gaussian.ipynb  msalign-multi-gaussian.md  msalign-single-gaussian.ipynb  msalign-single-gaussian.md
docs/main/: about.html  about.md  changelog.html  changelog.md  installation.html  reference.html  usage.html
docs/search/: search_index.json
misc/: .travis.yml
msalign/: __init__.py  _version.py  align.py  utilities.py
msalign/tests/: __init__.py  test_imports.py  test_main.py  test_utils.py
requirements/: requirements-deploy.txt  requirements-dev.txt  requirements-std.txt  requirements-web.txt
site-source/: index.md
site-source/css/: style.css
site-source/examples/: msalign-mass-spectrum.ipynb  msalign-mass-spectrum.md  msalign-multi-gaussian.ipynb  msalign-multi-gaussian.md  msalign-single-gaussian.ipynb  msalign-single-gaussian.md
site-source/main/: changelog.md  installation.md  reference.md  usage.md
tests/: test_imports.py  test_init.py  test_msalign.py  test_utilities.py  test_version.py
