[metadata]
name = msalign
url = https://github.com/lukasz-migas/msalign
download_url = https://github.com/lukasz-migas/msalign
license = Apache license 2.0
license_file = LICENSE
description = msalign: Signal calibration and alignment by reference peaks
long_description = file: README.md
long_description_content_type = text/markdown
author = Lukasz Migas
author_email = lukas.migas@yahoo.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    numpy<1.23,>=1.9.3
    scipy>=0.14.0

[options.extras_require]
web =
    markdown-changelog
    mkdocs
    mkdocs-material
deploy =
    wheel>=0.34.2
testing =
    pytest
    pytest-cov>=2.8.1
    coverage>=5.0.3
dev =
    pre-commit>=2.9.0
    isort
    black>=20.8b1
    flake8>=3.8.4
    check-manifest>=0.42
    %(testing)s

[bdist_wheel]
universal = 1

[flake8]
ignore = E1137, E722, D413, D401, D205, W503, W504, W605, F841, E203
max-line-length = 120
exclude =
    .git,
    .vscode,
    .settings,
    __pycache__,
    docs,
    site-source,
    dist,
    setup.py,
statistics=True

[tool:isort]
line_length = 120
indent = '    '
skip = .asv
profile = black

[coverage:run]
source = msalign
parallel = True
omit = tests/*
       msalign/_version.py
       *\__init__.py
